backend.log

> linkedin-agent-backend@1.0.0 dev
> nodemon --watch src --exec ts-node src/index.ts

[33m[nodemon] 3.1.11[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): src/**/*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
src/index.ts(37,21): error TS6133: 'req' is declared but its value is never read.
src/index.ts(51,10): error TS6133: 'req' is declared but its value is never read.
src/index.ts(59,20): error TS6133: 'req' is declared but its value is never read.
src/index.ts(59,49): error TS6133: 'next' is declared but its value is never read.

    at createTSError (/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/root/linkedin-agent/backend/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [ 6133, 6133, 6133, 6133 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
